<resources>
    <string name="app_name">GSE</string>
    <string name="login_email_hint">National Id</string>
    <string name="login_password_hint">Pin Number</string>
    <string name="register">REGISTER</string>
    <string name="signup_login_hint">Already have an account Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="Login">Login</string>
    <string name="pin">Pin Number</string>
    <string name="national_id">National Id</string>
    <string name="mobno">Mobile No.</string>
    <string name="reg_no">Reg</string>
    <string name="app_slogn">General Services of Egypt</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">LogIn</string>
    <string name="child">Child</string>
    <string name="or">OR</string>
    <string name="pinInput">Pin Number </string>
    <string name="ScanQR">Scan QR</string>
    <string name="CivilRegistryRequests">Government Body Requests</string>
    <string name="CivilRegistryReservations">Government Body Reservations</string>
    <string name="doctorApp">Doctor Appointments List</string>
    <string name="childApp">Child Vaccinations Appointments List</string>
    <string name="ministries">Ministries</string>
    <string name="school_neducation">Serviecly</string>
    <string name="specialization">Specialization</string>
    <string name="healthcare">HealthCare</string>
    <string name="healthcare_type">HealthCare Type</string>
    <string name="schedual">Appointments</string>
    <string name="doctor">Doctor</string>
    <string name="VaccinationType">Vaccination Type</string>
    <string name="VaccinationReservations"> My Child Vaccination Reservations</string>
    <string name="DoctorReservations"> My Doctor Reservations</string>
    <string name="civilregistration">Civil Registration</string>
    <string name="todo">TODO</string>
    <string name="loginMsg">Already \nhave an \nAccount</string>
    <string name="ministry_of_interior">Ministry of Interior</string>
    <string name="ministry_of_health">Ministry of Health</string>
    <string name="vaccinations">Book  Appointment to vaccination</string>
    <string name="healthcare_reserve">Book  Appointment with doctor</string>
    <string name="turn_off_flashlight">FlashLight on</string>
    <string name="turn_on_flashlight">flashLight off</string>
    <string name="title_activity_main">QR and Barcode Scanner</string>
    <string name="message">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="sector">Sector</string>
    <string name="Waiting">Waiting</string>
    <string name="Pleasewaiting">Please waiting ...</string>
    <string name="EnteryourNationalId">Enter your National Id</string>
    <string name="LogInCancelled">LogIn Cancelled</string>
    <string name="SuccessLogIn">Success LogIn</string>
    <string name="InvalidNationalQR">Invalid National Id or QR</string>
    <string name="InvalidNationalPin">Invalid National Id or Pin Number</string>
    <string name="LoginByPinNumber">Login By Pin Number</string>
    <string name="PleaseEnterPinNumber">Please Enter PinNumber</string>
    <string name="YoumissedPinNumberEmpty">You missed Pin Number Empty</string>
    <string name="Cancel">Cancel</string>
    <string name="OnemoreStep">One more Step !</string>
    <string name="EnteryourPlaceofReceipt">Enter your Place of Receipt (Address):  </string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="EnterAddress">Enter Address</string>
    <string name="pleaseEnteryouraddress">please Enter your address</string>
    <string name="SelectDate">Select Date</string>
    <string name="Selectoffice">Select office</string>
    <string name="Selectschedual">Select schedual</string>
    <string name="specializationss">specialization : </string>
    <string name="Doctors">Doctor : </string>
    <string name="Healthcares">Healthcare : </string>
    <string name="Scheduals">Schedual : </string>
    <string name="Codes">Code : </string>
    <string name="Sendcomplaint">Send Complaint</string>
    <string name="Thecomplaint">The complaint</string>
    <string name="ChildName">Child Name :</string>
    <string name="Vaccinated">Vaccinated : </string>
    <string name="VaccinationTypee">Vaccination Type : </string>
    <string name="CantGetYourLocation">Can\'t Get Your Location</string>
    <string name="EnterAnyDetails">Enter the Details of Request :</string>
    <string name="Servicee">Service: </string>
    <string name="Languagee">Language: </string>
    <string name="Addresss">Address: </string>
    <string name="Datee">Date: </string>
    <string name="RequestType">Request Type: </string>
    <string name="RequestId">Request Id: </string>
    <string name="EnableGPS">Enable GPS</string>
    <string name="Requestanambulance">Request an ambulance</string>
    <string name="EnterDetails">You missed enter details of Request</string>
    <string name="TrafficViolations">Traffic Violations</string>
    <string name="Goverr">Government Body: </string>
    <string name="Sendd">Send Date: </string>
    <string name="Replayy">Replay: </string>
    <string name="ReplayDatee">Replay Date: </string>
    <string name="Officee">Office : </string>
    <string name="ReservationId">Reservation Id :  </string>
    <string name="CancelHealthcareAppointment">Cancel Healthcare Appointment</string>
    <string name="Delete">Delete</string>
    <string name="AreyouwanttoDeletethisappointment">Are you want to Delete this appointment ?</string>
    <string name="Selecthealthcare">Select healthcare</string>
    <string name="SelectDoctor">Select Doctor</string>
    <string name="ReserveHealthcareAppointment">Reserve Healthcare Appointment</string>
    <string name="Areyouwanttoreservethisappointment">Are you want to reserve this appointment?</string>
    <string name="Reserve">Reserve</string>
    <string name="NoReservationyet">No Reservations yet</string>
    <string name="CancelVaccinationAppointment">Cancel Vaccination Appointment</string>
    <string name="ReserveVaccinationAppointment">Reserve Vaccination Appointment</string>
    <string name="RequestService">Request Service</string>
    <string name="Language">Language</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="NumberofCopies">Number of Copies</string>
    <string name="GovernmentBody">Government Body</string>
    <string name="Service">Service</string>
    <string name="State">State</string>
    <string name="City">City</string>
    <string name="Region">Region</string>
    <string name="District">District</string>
    <string name="Bookanappointment">Book an appointment</string>
    <string name="Reservation">Reservation</string>
    <string name="Date">Date</string>
    <string name="Office">Office</string>
    <string name="Services">Services</string>
    <string name="Bookvaccinationappointment">Book vaccination appointment</string>
    <string name="CurrentPinNumber">Current Pin Number</string>
    <string name="NewPinNumber">New Pin Number</string>
    <string name="ConfirmPinNumber">Confirm Pin Number</string>
    <string name="Requests">Requests</string>
    <string name="Reservations">Reservations</string>
    <string name="ListofRequests">List of Requests</string>
    <string name="ReservationList">List of Reservations</string>
    <string name="Ministry">Ministry</string>
    <string name="Account">Account</string>
    <string name="ChangePin">Change Pin Number</string>
    <string name="User">User</string>
    <string name="Search">Search</string>
    <string name="Home">Home</string>
    <string name="Menu">Menu</string>
    <string name="Send">Send</string>
    <string name="EnterCom">Enter the Complaint</string>
    <string name="SelectGove">Select Government Body</string>
    <string name="searchhere">search here .....</string>
    <string name="Arabica">العربية</string>
    <string name="StartNow">Start Now</string>
    <string name="SelectAction">Select Action</string>
    <string name="GSEoffered">GSE offered in : </string>
    <string name="Send_Complaint">Send Complaint to Governement Body</string>
    <string name="Areyouwanttosendthiscomplaint">Are you want to send  this complaint?</string>
    <string name="CarCode">Car code :</string>
    <string name="TypeViolation">Type of Violation :</string>
    <string name="price">Price :</string>
    <string name="IsPaid">Is Paid :</string>
    <string name="Traffic_violations">Traffic violations</string>
    <string-array name="service_array"></string-array>
    <string name="title_activity_maps">Map</string>
    <string name="Details">Details :</string>
    <string name="CertificationName">Certification Name :</string>
    <string name="pdf_url">PDF URL</string>
    <string name="download">Download</string>
    <string name="permission_request_message">Storage permission allows us to save pdf.</string>
    <string name="MyCertifications">My Certifications</string>
    <string name="ReserveCivilRegistryAppointment">Reserve Civil Registry Appointment</string>
    <string name="RequestServiceFromCivilRegistry">Request Service From Civil Registry</string>
    <string name="Areyouwanttosendthisrequest">Are you want to send this request ?</string>
    <string name="ShowInMap">Show in Map</string>
    <string name="MyRequests">My Requests</string>
    <string name="title_activity_maps_request">Map</string>
    <string name="MarkerinRequestPlace">Marker in Request Place</string>
    <string name="RequestanambulanceList">Request an ambulance list</string>
    <string name="Complaint">Complaint :</string>
    <string name="ShowResponse">Show Response</string>
    <string name="ComplaintList">Complaint List</string>
    <string name="NoRespondyet">No Respond yet</string>
    <string name="MyComplaints">My Complaints</string>
    <string name="BookRealEstate">Book Appointment in Real Estate Month</string>
    <string name="RealEstateMonthAppointmentList">Real Estate Month Appointments List</string>
    <string name="BranchOffice">Branch Office</string>
    <string name="PleaseSelectService">Please Select Service</string>
    <string name="NoInformationYet">No Information Yet</string>
    <string name="title_activity_show_places">Map</string>
    <string name="ShowPlacesNearMe">Show Places Near Me</string>
    <string name="Searche">Search</string>
    <string name="Hospitals">Hospitals</string>
    <string name="Restaurants">Restaurants</string>
    <string name="Schools">Schools</string>
    <string name="MyAppointmentList">My Appointments List</string>
    <string name="MinistryofJustice">Ministry of Justice</string>
    <string name="MinistryofEducation">Ministry of Education</string>
    <string name="Educational_certificates">Educational certificates</string>
    <string name="ReserveRealEstateAppointment">Reserve Real Estate Appointment</string>
    <string name="Phase">Phase</string>
    <string name="RequestEducationalService">Request a statement of degrees</string>
    <string name="RequestServiceFromMinistryEducation">Request Service From Ministry of Education</string>
    <string name="Phasee">Phase :</string>
    <string name="RequestsList">Requests List</string>
    <string name="title_activity_dashboard_home">DashboardHome</string>
    <string name="WhatsOnYourMind">What\'s On your mind?</string>
    <string name="AddNewPost">Add New Post</string>
    <string name="EmptyText">Empty Text</string>
    <string name="CitizenName">Citizen Name :</string>
    <string name="NationalId">National Id :</string>
    <string name="Logout">Log out</string>
    <string name="CertificationGrade">Certification Grade :</string>
    <string name="Balance">Balance</string>
</resources>