<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:iconTint="@android:color/white"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/ministries" />

        <item
            android:id="@+id/nav_profile"
            android:iconTint="@android:color/white"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/ShowPlacesNearMe" />
        <item
            android:id="@+id/nav_changepin"
            android:iconTint="@android:color/white"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/ChangePin" />
        <item
            android:iconTint="@android:color/white"
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/complaint"
            android:title="@string/ComplaintList" />

        <item
            android:iconTint="@android:color/white"
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_money_black_24dp"
            android:title="@string/Balance" />

        <item
            android:iconTint="@android:color/white"
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/Logout" />
    </group>
</menu>
