<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loading_shape"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        app:civ_border_width="@dimen/_1sdp"
        android:padding="6dp"
        app:civ_border_color="@color/whiteTextColor"
        android:src="@drawable/vv" />
    <LinearLayout
        android:padding="8dp"
        android:background="@drawable/loading_shape"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:textColor="@color/whiteTextColor"
            android:id="@+id/tvTypeofViolation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TypeViolation"
            android:textSize="15sp"
             />

        <TextView
            android:textColor="@color/whiteTextColor"

            android:id="@+id/tvCarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CarCode" />

        <TextView
            android:textColor="@color/whiteTextColor"

            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date" />

        <TextView
            android:textColor="@color/whiteTextColor"

            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/price"
            android:textSize="15sp" />

        <TextView
            android:textColor="@color/whiteTextColor"

            android:id="@+id/tvIsPaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="IsPaid :"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>

</androidx.cardview.widget.CardView>

