<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loading_shape"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="@dimen/_90sdp"
        app:civ_border_width="@dimen/_1sdp"
        app:civ_border_color="@color/whiteTextColor"
        android:layout_weight="1"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/complaint" />
    <LinearLayout

        android:layout_gravity="center"
        android:padding="8dp"
        android:background="@drawable/loading_shape"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:textColor="@color/whiteTextColor"
            android:id="@+id/tvGover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GovernmentBody"
            android:textSize="15sp"
             />

        <TextView
            android:textColor="@color/whiteTextColor"

            android:id="@+id/tvComplaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/Complaint"
            android:textSize="15sp" />

        <TextView
            android:textColor="@color/whiteTextColor"

            android:id="@+id/tvSenDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Datee" />



    </LinearLayout>
</LinearLayout>

</androidx.cardview.widget.CardView>

