<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollFeed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    android:focusableInTouchMode="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/personalDetailsCard"
        style="@style/centreLocatorCardDesign"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputNationalId"
                android:layout_width="match_parent"

                app:counterMaxLength="14"
                app:errorTextColor="@color/cardColorOrange"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtNationalId"
                    style="@style/modifiedEditText"
                    android:hint="@string/national_id"
                    app:errorTextColor="@color/cardColorOrange"
                    android:singleLine="true"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    tools:targetApi="o"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnLogIn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/centre_button"
                android:text="@string/ScanQR"
                android:textColor="@color/whiteTextColor" />
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:text="@string/or"
                android:textColor="@color/zxing_custom_result_view"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnPin"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/centre_button"
                android:text="@string/pin"
                android:textSize="12sp"
                android:textColor="@color/whiteTextColor" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
